Fix nav alignment

--- a/app/assets/stylesheets/components/sub_nav.scss
+++ b/app/assets/stylesheets/components/sub_nav.scss
@@ -1,4 +1,5 @@
 .subnav {
+  display: flex;
   margin-left: 0px;
   margin-right: 0px;
   border-bottom: 1px solid black;
@@ -11,7 +12,6 @@
 
   nav {
     text-align: right;
-    margin-top: 25px;
 
     a {
       margin-left: 15px;
